# backtester

./: CMakeLists.txt  chatgarch.cpp.bak  garch.cpp  garch.hpp  main.cpp  test.cpp
examples/: basic_run.py
market_sim/: data_loader.py  helpers.py  intraday.py  market.py  simulator.py
